@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-10-25T16:28:44Z",
+  "timestamp" : "2022-10-26T16:17:36Z",
   "count_outdated" : 129,
   "uniques_outdated" : 44,
-  "count" : 135,
-  "uniques" : 47,
+  "count" : 136,
+  "uniques" : 48,
   "views" : [
     {
       "timestamp": "2022-10-18T00:00:00Z",
@@ -21,6 +21,13 @@
     },
     {
       "timestamp": "2022-10-25T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-10-26T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
