@@ -1,6 +1,6 @@
 {
-  "count": 6,
-  "uniques": 3,
+  "count": 7,
+  "uniques": 4,
   "views": [
     {
       "timestamp": "2022-10-18T00:00:00Z",
@@ -14,6 +14,11 @@
     },
     {
       "timestamp": "2022-10-25T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-10-26T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
