@@ -1,3 +1,11 @@
+2022-10-26T16:17:36Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3330728761 # 557
+* notice: last 14d: unq all: 4 7
+* notice: prev accum: outdated-unq outdated-all / unq all: 44 129 / 47 135
+* notice: next accum: outdated-unq outdated-all / unq all: 44 129 / 48 136
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-10-26]
+
 2022-10-25T16:28:44Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3322645637 # 554
 * notice: last 14d: unq all: 3 6
